// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form/LabeledText label and children 1`] = `
<LabeledText
  label="Some label"
>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        >
          Some label
        </label>
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control"
          >
            I'm a child
          </div>
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;

exports[`Storyshots Form/LabeledText label and pre-formated children 1`] = `
<LabeledText
  label="Some label"
  pre={true}
>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        >
          Some label
        </label>
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control labeled-pre"
          >
            I'm a child
spread over
a few lines
          </div>
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;

exports[`Storyshots Form/LabeledText label and value 1`] = `
<LabeledText
  label="Some label"
  value="Some value"
>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        >
          Some label
        </label>
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control"
          >
            Some value
          </div>
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;

exports[`Storyshots Form/LabeledText label, no value 1`] = `
<LabeledText
  label="Some label"
>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        >
          Some label
        </label>
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control"
          />
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;

exports[`Storyshots Form/LabeledText no props 1`] = `
<LabeledText>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        />
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control"
          />
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;

exports[`Storyshots Form/LabeledText value, no label 1`] = `
<LabeledText
  value="some value"
>
  <FormGroup
    row={true}
    tag="div"
  >
    <div
      className="position-relative row form-group"
    >
      <Label
        lg={2}
        tag="label"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <label
          className="col-12 col-lg-2 col-form-label"
        />
      </Label>
      <Col
        lg={8}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
        xs={12}
      >
        <div
          className="col-12 col-lg-8"
        >
          <div
            className="form-control"
          >
            some value
          </div>
        </div>
      </Col>
    </div>
  </FormGroup>
</LabeledText>
`;
